--- a/index.html
+++ b/index.html
@@ -16,19 +16,36 @@
     </header>
     <main>
         MAIN HABILIDADES
-          SECTION HARD SKILLS ****
-            ARTICLE LINGUAGENS / FRAMEWORKS
-            ARTICLE CURSOS
-            ARTICLE IDIOMAS
-          SECTION SOFT SKILLS ****
-            ARTICLE (Comunicação, Inteligência Emocional, Liderança, Trabalho em Equipe, Agile...)
-          SESSÕES
-            CTA - Call To Action (ENTRE EM CONTATO)
+            <section>
+                SECTION HARD SKILLS ****
+                    ARTICLE LINGUAGENS / FRAMEWORKS
+                    ARTICLE CURSOS
+                    ARTICLE IDIOMAS
+            </section>
+            <section>
+                SOFT SKILLS ****
+                <article>
+                    <ul>
+                        <li>Comunicação</li>
+                        <li>Inteligência Emocional</li>
+                        <li>Liderança</li>
+                        <li>Trabalho em Equipe</li>
+                        <li>Agile</li>
+                    </ul>
+                </article>
+            </section>  
+            <section>
+                CTA - Call To Action (ENTRE EM CONTATO)
+            </section>
     </main>
     <aside>
-        ASIDE EXPERIÊNCIA PROFISSIONAL***
-          SECTION REFERÊNCIAS (RECOMENDAÇÕES)
-          SECTION EXPERIÊNCIAS/PROJETOS > LISTA
+        EXPERIÊNCIA PROFISSIONAL***
+        <section>
+            REFERÊNCIAS (RECOMENDAÇÕES)
+        </section>
+        <section>
+              EXPERIÊNCIAS/PROJETOS > LISTA
+        </section>
     </aside>
     <footer>
         FOOTER
