fix: ajustando o local da pasta de imagens e o nome correto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Desenvolvedor Web JR</h1>
-        <img src="imagens/avatar-redondo.png" alt="foto">
+        <img src="assets/images/avatar-redondo.png" alt="foto">
         <p>
             <a href="https://wa.me/5521983672131?text=Ol%C3%A1%21%20Contrata%20n%C3%B3is%20a%C3%AA%2C%20na%20humilde." target="_blank" rel="noopener noreferrer" title="Manda um zap prá nóis">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" widht="24" height="24">
