--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <title>Meu Portifólio</title>
 </head>
 <body>
     <header>
         <h1>Desenvolvedor Web JR</h1>
         <img src="assets/images/avatar-redondo.png" alt="foto">
+        <p>Flavio Benedini, 45 anos.</p>
             <nav>
                 <a href="https://wa.me/5521983672131?text=Ol%C3%A1%21%20Contrata%20n%C3%B3is%20a%C3%AA%2C%20na%20humilde." target="_blank" rel="noopener noreferrer" title="Manda um zap prá nóis">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" widht="24" height="24">
