feat: gerando os artigos da parte principal

--- a/index.html
+++ b/index.html
@@ -43,12 +43,30 @@
         - LINKS EXTERNOS
     </header>
     <main>
-        HABILIDADES
+        <h2>HABILIDADES</h2>
+        <p>Saca só como eu sou habilidoso!</p>
             <section>
-                HARD SKILLS ****
-                    <article>LINGUAGENS / FRAMEWORKS</article>
-                    <article>CURSOS</article>
-                    <article>IDIOMAS</article>
+                <h3>HARD SKILLS</h3>
+                <article>
+                    <img src="assets/images/git.jpg" alt="Git" width="250" height="auto">
+                    <h4>git e gitFlow</h4>
+                    <p>Estou familiarizado e não vou fazer deploy as sextas.</p>
+                </article>
+                <article>
+                    <img src="assets/images/html.jpg" alt="HTML" width="250" height="auto">
+                    <h4>HTML</h4>
+                    <p>Meu HTML5 é semântico pacas.</p>
+                </article>
+                <article>
+                    <img src="assets/images/css.jpg" alt="CSS" width="250" height="auto">
+                    <h4>CSS</h4>
+                    <p>Meu estilo é muito estiloso.</p>
+                </article>
+                <article>
+                    <img src="assets/images/js.jpg" alt="JavaScript" width="250" height="auto">
+                    <h4>JavaScript</h4>
+                    <p>Faço qualquer controle em JS.</p>
+                </article>
             </section>
             <section>
                 SOFT SKILLS ****
