--- a/index.html
+++ b/index.html
@@ -81,7 +81,64 @@
                 </article>
             </section>  
             <section>
-                <a href="tel: +5521983672131">Me contrata</a>
+                <h3>Oferta Imperdível</h3>
+                <p>Solicite um orçamento online e receba até 1% de desconto.</p>
+                <form action="">
+                    <fieldset>
+                        <legend>Dados Pessoais</legend>
+                        <label for="nome">Nome</label>
+                        <input type="text" name="nome" id="nome" required><br>
+                        <label for="email">E-mail</label>
+                        <input type="email" name="email" id="email" required><br>
+                        <label for="tel">Telefone</label>
+                        <input type="tel" name="tel" id="tel"><br>
+                        <label for="cor">Qual sua cor preferida?</label>
+                        <input type="color" name="cor" id="cor"><br>
+                        <label>Sexo:</label>
+                        <input type="radio" name="sexo" value="fem" id="feminino">
+                        <label for="feminino">Faminino</label>
+                        <input type="radio" name="sexo" value="masc" id="masculino">
+                        <label for="masculino">Masculino</label>
+                        <input type="radio" name="sexo" value="outro" id="outro">
+                        <label for="outro">Outro</label>
+                        <input type="radio" name="sexo" value="none" id="none">
+                        <label for="none">Prefiro não dizer</label>
+
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>Sobre a Oportunidade</legend>
+                        <label for="salario">Salario</label>
+                        <input type="number" name="salario" id="salario"><br>
+                        <label for="vaga">Atuação da Vaga</label>
+                        <select name="vaga" id="vaga">
+                            <option value="" selected disabled>-- Selecione --</option>
+                            <option value="front">Front End</option>
+                            <option value="back">Back End</option>
+                            <option value="fullstack">FullStack</option>
+                            <option value="DevOps">DevOps</option>
+                        </select><br>
+                        <label for="mensagem">Descição da vaga</label>
+                        <textarea name="mensagem" id="mensagem" cols="30" rows="10">
+                        </textarea>
+                    </fieldset>
+
+
+                    <fieldset>
+                        <legend>Informações Complementares</legend>
+                        <label for="acordar">Que horas vou ter que acordar?</label>
+                        <input type="time" name="acordar" id="acordar">
+                        <label for="">Que horas começa o Happy Hour?</label>
+                        <input type="time" name="" id=""><br>
+                        <input type="checkbox" name="optin" id="optin" required>
+                        <label for="optin">Estou ciente que vou contratar, no regime CLT por R$10k.</label>
+                        <input type="hidden" name="token" value="token-de-autenticacao">
+                    </fieldset>
+
+                    <button type="reset">Limpar</button>
+                    <button disabled >Garanta a sua oferta VIP</button>
+                    <button>Me garanta na sua empresa.</button>
+                </form>
             </section>
     </main>
     <aside>
