Finalizando os dados

--- a/index.html
+++ b/index.html
@@ -142,18 +142,32 @@
             </section>
     </main>
     <aside>
-        EXPERIÊNCIA PROFISSIONAL***
+        <h2>EXPERIÊNCIA PROFISSIONAL</h2>
+        <section>
+            <h3>Projetos</h3>
+            <ul>
+                <li>Site Institucional da AMBEV</li>
+                <li>Portal de Notícias da UOL</li>
+                <li>Mapa da COVID para OMS</li>
+                <li>eCommerce da Apple</li>
+            </ul>
+        </section>
         <section>
             REFERÊNCIAS (RECOMENDAÇÕES)
         </section>
-        <section>
-              EXPERIÊNCIAS/PROJETOS > LISTA
-        </section>
     </aside>
     <footer>
-        FOOTER
-          - CONTATOS  
-          - LINKS EXTERNOS
+        <ul>
+            <li>
+                <a href="mailto: flavio.benedini@me.com">flavio.benedini@me.com</a>
+            </li>
+            <li>
+                <a href="https://wa.me/5521983672131?text=Ol%C3%A1%21%20Contrata%20n%C3%B3is%20a%C3%AA%2C%20na%20humilde." target="_blank" rel="noopener noreferrer" title="Manda um zap prá nóis">
+                    (21)98367-2131
+                  </a>
+
+            </li>
+        </ul>
     </footer>
 
 </body>
