ajustes na borda do header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Desenvolvedor Web JR</h1>
         <div id="apresentacao">
             <img src="assets/images/avatar-redondo.png" alt="foto">
-            <div>
+            <div id="texto">
                 
-                <p>Flavio Benedini, 45 anos, iniciando minha carreira com a stack <abbr title="SQL, Express, ReactJS, NodeJS">SERN</abbr>.</p>
+                <p>Flavio Benedini, 45 anos. Especialista em Infraestrutura. Iniciando a carreira de Web Developer FullStack - <abbr title="SQL, Express, ReactJS, NodeJS">SERN</abbr>.</p>
                 <nav>
                     <a href="https://wa.me/5521983672131?text=Ol%C3%A1%21%20Contrata%20n%C3%B3is%20a%C3%AA%2C%20na%20humilde." target="_blank" rel="noopener noreferrer" title="Manda um zap prá nóis">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" widht="24" height="24">
