ajustes nas imagens

--- a/index.html
+++ b/index.html
@@ -51,26 +51,28 @@
         <p>Saca só como eu sou habilidoso!</p>
             <section>
                 <h3>HARD SKILLS</h3>
-                <article>
-                    <img src="assets/images/git.jpg" alt="Git" width="250" height="auto">
-                    <h4>git e gitFlow</h4>
-                    <p>Estou familiarizado e não vou fazer deploy as sextas.</p>
-                </article>
-                <article>
-                    <img src="assets/images/html.jpg" alt="HTML" width="250" height="auto">
-                    <h4>HTML</h4>
-                    <p>Meu HTML5 é semântico pacas.</p>
-                </article>
-                <article>
-                    <img src="assets/images/css.jpg" alt="CSS" width="250" height="auto">
-                    <h4>CSS</h4>
-                    <p>Meu CSS aplica um estilo muito estiloso.</p>
-                </article>
-                <article>
-                    <img src="assets/images/js.jpg" alt="JavaScript" width="250" height="auto">
-                    <h4>JavaScript</h4>
-                    <p>Além de JS Vanilla, também já sei trabalhar com NodeJS e ReactJS.</p>
-                </article>
+                <div id="artigos">
+                    <article>
+                        <img src="assets/images/git.png" alt="Git">
+                        <h4>git e gitFlow</h4>
+                        <p>Estou familiarizado e não vou fazer deploy as sextas.</p>
+                    </article>
+                    <article>
+                        <img src="assets/images/html.png" alt="HTML">
+                        <h4>HTML</h4>
+                        <p>Meu HTML5 é semântico pacas.</p>
+                    </article>
+                    <article>
+                        <img src="assets/images/css.png" alt="CSS">
+                        <h4>CSS</h4>
+                        <p>Meu CSS aplica um estilo muito estiloso.</p>
+                    </article>
+                    <article>
+                        <img src="assets/images/js.png" alt="JavaScript">
+                        <h4>JavaScript</h4>
+                        <p>Além de JS Vanilla, também já sei trabalhar com NodeJS e ReactJS.</p>
+                    </article>
+                </div>
             </section>
             <section>
                 <h3>Oferta Imperdível</h3>
