ajustes nos botoes

--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
                                 <input type="email" name="email" id="email" placeholder="email@provedor.com" required>
                                 <input type="tel" name="tel" id="tel" placeholder="+5521999991111">
                             </div>
+                            <div id="botoes">
+                                <button>Me garanta na sua empresa.</button>
+                                <button type="reset">Limpar</button>
+                            </div>
                         </div>
-
                     </fieldset>
 
-                    <button type="reset">Limpar</button>
-                    <button>Me garanta na sua empresa.</button>
                 </form>
             </section>
             <section>
