ajustes no formulário

--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                                 <input type="tel" name="tel" id="tel" placeholder="+5521999991111">
                             </div>
                             <div id="botoes">
-                                <button>Me garanta na sua empresa.</button>
-                                <button type="reset">Limpar</button>
+                                <button>Enviar</button>
                             </div>
                         </div>
                     </fieldset>
